[tool.poetry]
name = "bitbootpy"
version = "0.3.0"
description = ""
authors = ["estill01 <ehs.stillman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
uuid = "^1.30"
kademlia = "^2.2.2"
twisted = "^22.10.0"
tenacity = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
