[tool.poetry]
name = "bitbootpy"
version = "0.3.0"
description = ""
authors = ["estill01 <ehs.stillman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
uuid = "^1.30"
kademlia = "^2.2.2"
twisted = "^22.10.0"
tenacity = "^8.2.2"
typing_extensions = ">=4.7"
python-bitcoinlib = "^0.12.2"
solana = "^0.30.2"
web3 = "^7.0"
ddht = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-asyncio = "^0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
